DLL経由（CAugustWindow2）だとどうも上手く動かないので CMwlAghWindow を直接使う形式にしてみたら動いたっぽい。
git-svn-id: http://svn.sourceforge.jp/svnroot/open-mgl/MGL/trunk@753 6d62ff88-fa28-0410-b5a4-834eb811a934

--- a/mgllib-test/af2-test/af2_test.vcproj
+++ b/mgllib-test/af2-test/af2_test.vcproj
@@ -79,7 +79,7 @@
 				OutputFile="bin/af2_test.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\lib\vc2005"
+				AdditionalLibraryDirectories="..\lib\vc2005,..\lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug_VC80/af2_test.pdb"
 				SubSystem="2"
