--- a/mgllib-test/af2-test/af2_test_VC90.vcproj
+++ b/mgllib-test/af2-test/af2_test_VC90.vcproj
@@ -76,11 +76,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib "
+				AdditionalDependencies="mwlagh_d.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib  "
 				OutputFile="bin/af2_test.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\lib\vc2005,..\lib"
+				AdditionalLibraryDirectories="..\lib\vc2008,..\lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug_VC90/af2_test.pdb"
 				SubSystem="2"
@@ -177,7 +177,7 @@
 				OutputFile="bin/af2_test.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\lib\vc2005"
+				AdditionalLibraryDirectories="..\lib\vc2008,..\lib"
 				ProgramDatabaseFile=".\Release_VC90/af2_test.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
