CAugustImage2 とりあえず出来たー
git-svn-id: http://svn.sourceforge.jp/svnroot/open-mgl/MGL/trunk@858 6d62ff88-fa28-0410-b5a4-834eb811a934

--- a/mgllib/mgllib_VC90.vcproj
+++ b/mgllib/mgllib_VC90.vcproj
@@ -2217,32 +2217,6 @@
 				>
 			</File>
 			<File
-				RelativePath="src\august\AugustImage.cpp"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="src\august\AugustImage.h"
-				>
-			</File>
-			<File
 				RelativePath="src\august\AugustImage1.cpp"
 				>
 				<FileConfiguration
@@ -2601,6 +2575,14 @@
 				</File>
 				<File
 					RelativePath="src\august\AugustGraphicsManager.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\august\AugustImage2.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\august\AugustImage2.h"
 					>
 				</File>
 				<File
